# smtp-smuggling-lab

./: .gitignore  README.md  pyproject.toml  reproduce.sh
demo/: README.md  poc_smuggle.pcap  poc_smuggle.py
detect/gateway/: smtp-smuggling.zeek
detect/logs/: parse_mail_log.py
docs/: status.md  zeek-primer.md
docs/plans/: 2026-04-14-m0-smtp-smuggling-lab-floor.md
docs/specs/: 2026-04-14-smtp-smuggling-lab-design.md
harness/: carrier.py  oracle.py  payloads.py  render_matrix.py  run_case.py  run_m0.py  run_matrix.py  send.py  verify_zeek_coverage.py
lab/: podman-compose.yml
lab/dovecot/: Containerfile  dovecot.conf  entrypoint.sh
lab/exim/: Containerfile  entrypoint.sh  exim4.conf
lab/postfix/: Containerfile  entrypoint.sh  main.cf  master.cf
lab/stub/: stub_smtpd.py
lab/tcpdump-sidecar/: Containerfile  entrypoint.sh
payloads/: payloads.yaml
results/: log-parser-notices.json  matrix.json  matrix.md  zeek-coverage.json
results/pcaps/: case-a1.pcap  case-a5.pcap  case-baseline.pcap  case-e2e-a1-receiver.pcap  case-e2e-a1-sender.pcap  case-e2e-a10-receiver.pcap  case-e2e-a10-sender.pcap  case-e2e-a11-receiver.pcap  case-e2e-a11-sender.pcap  case-e2e-a12-receiver.pcap  case-e2e-a12-sender.pcap  case-e2e-a13-receiver.pcap  case-e2e-a13-sender.pcap  case-e2e-a2-receiver.pcap  case-e2e-a2-sender.pcap  case-e2e-a3-receiver.pcap  case-e2e-a3-sender.pcap  case-e2e-a4-receiver.pcap  (+89 more)
tests/: expected_matrix.json  test_carrier.py  test_log_parser.py  test_matrix.py  test_oracle.py  test_payloads.py  test_send.py  test_stub.py  test_zeek_smoke.py
(+51 files in other folders)
